Fix Modal View on Mobile & make stars bigger

--- a/Project-Site/src/app/shared/components/modals/catalog-filter-modal/catalog-filter-modal.component.css
+++ b/Project-Site/src/app/shared/components/modals/catalog-filter-modal/catalog-filter-modal.component.css
@@ -11,3 +11,7 @@
     border-width: 1px;
     border-color: lightgray;
 }
+
+.stars-size {
+    font-size: 20px;
+}
